--- a/Web-pages/about.html
+++ b/Web-pages/about.html
@@ -7,20 +7,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    
     <!-- External CSS file -->
-    <link rel="stylesheet" href="Assets/css/style.css">
+    <link rel="stylesheet" href="../Assets/css/style.css">
 
     <!-- Boxicons CSS -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
      <!-- Favicons -->
-     <link rel="icon" href="Assets/images/favicon.jpg">
+     <link rel="icon" href="../Assets/images/favicon.jpg">
 
 </head>
 <body>
     <header>
         <div class="container">
             <div class="logo-container">
-                <img src="/Assets/images/logo.jpg" alt="logo">
+                <img src="../Assets/images/logo.jpg" alt="logo">
             </div>
         </div>
         <div class="nav-container">
@@ -47,7 +47,7 @@
         <div class ="container">
                 <h2>About</h2>
                 <div class="about-left">
-                    <img src="Assets/images/about.jpg" alt="About Me">
+                    <img src="../Assets/images/about.jpg" alt="About Me">
                 </div>
                 <div class="about-right">
                     <p>EVER SINCE I WAS YOUNG MY PARENTS ALWAYS THOUGHT ME DIFFERENT THINGS ABOUT LIFE. I WAS BLESSED TO HAVE A VERY SUPPORTIVE FAMILY. </p>
