--- a/Index.html
+++ b/Index.html
@@ -26,9 +26,9 @@
         <div class="nav-container">
             <nav class="header-navigation">
                 <a href="#header">Home</a>
-                <a href="Abouts">Abouts</a>
-                <a href="#Album">Album</a>
-                <a href="#Skills">Skills</a>
+                <a href="Web-pages/about.html">Abouts</a>
+                <a href="Web-pages/Favorites.html">Album</a>
+                <a href="Web-pages/contacts.html">Favotites</a>
                 <a href="#Contacts">Contacts</a>
             </nav>
         </div>
