--- a/Web-pages/Album.html
+++ b/Web-pages/Album.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    
     <!-- External CSS file -->
-    <link rel="stylesheet" href="Assets/css/style.css">
+    <link rel="stylesheet" href="../Assets/css/style.css">
 
     <!-- Boxicons CSS -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -17,7 +17,7 @@
 
 </head>
 <body>
-    <header>
+    <header id="header">
         <div class="container">
             <div class="logo-container">
                 <img src="Assets/images/logo.jpg" alt="logo">
@@ -27,13 +27,21 @@
             <nav class="header-navigation">
                 <a href="#header">Home</a>
                 <a href="Web-pages/about.html">Abouts</a>
-                <a href="Web-pages/Favorites.html">Album</a>
-                <a href="Web-pages/contacts.html">Favotites</a>
-                <a href="#Contacts">Contacts</a>
-            </nav>
+                <a href="Web-pages/Album.html">Album</a>
+                <a href="Web-pages/Favorites.html">Favotites</a>
+                <a href="Web-pages/">Contacts</a>
+            </nav> 
         </div>
+        <section class="banner-section">
+            <div class ="container">
+                <div class="banner">
+                    <h1>Hi! I'm Kristine Joyce Diego and Welcome </h1>
+                    <h1>to my Personal Website</h1>
+                </div>  
+            <div>            
+        </section>
     </header>
-
+    
     <section id="Album" class="Album-section">
         <div class="container">
             <h2>My Album</h2>
