--- a/Web-pages/about.html
+++ b/Web-pages/about.html
@@ -17,7 +17,7 @@
 
 </head>
 <body>
-    <header>
+    <header id="header">
         <div class="container">
             <div class="logo-container">
                 <img src="../Assets/images/logo.jpg" alt="logo">
@@ -26,22 +26,21 @@
         <div class="nav-container">
             <nav class="header-navigation">
                 <a href="#header">Home</a>
-                <a href="Abouts">Abouts</a>
-                <a href="#Album">Album</a>
-                <a href="#Skills">Skills</a>
-                <a href="#Contacts">Contacts</a>
-            </nav>
+                <a href="Web-pages/about.html">Abouts</a>
+                <a href="Web-pages/Album.html">Album</a>
+                <a href="Web-pages/Favorites.html">Favotites</a>
+                <a href="Web-pages/">Contacts</a>
+            </nav> 
         </div>
+        <section class="banner-section">
+            <div class ="container">
+                <div class="banner">
+                    <h1>Hi! I'm Kristine Joyce Diego and Welcome </h1>
+                    <h1>to my Personal Website</h1>
+                </div>  
+            <div>            
+        </section>
     </header>
-
-    <section class="banner-section">
-        <div class ="container">
-            <div class="banner">
-                <h1>WELCOME!!</h1>
-                <h1>Hi! I'm Kristine Joyce Diego</h1>
-            </div>  
-        <div>            
-    </section>
 
     <section id="Abouts" class="about-section">
         <div class ="container">
