--- a/Index.html
+++ b/Index.html
@@ -28,7 +28,7 @@
                 <a href="#header">Home</a>
                 <a href="Web-pages/about.html">Abouts</a>
                 <a href="Web-pages/Album.html">Album</a>
-                <a href="Web-pages/Favorites.html">Favotites</a>
+                <a href="Web-pages/Favorites.html">Favorites</a>
                 <a href="Web-pages/">Contacts</a>
             </nav> 
         </div>
@@ -91,9 +91,9 @@
         </div>
     </section>
 
-<section id="Skills" class="skills-section">
+<section id="Favorites" class="Favorite-section">
     <div class="container">
-        <h2>My Skills</h2>
+        <h2>Favorites</h2>
         <div class="row">
             <div class="col">
                 <span><i class='bx bxl-windows' ></i></span>
