--- a/Web-pages/Album.html
+++ b/Web-pages/Album.html
@@ -13,23 +13,25 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
      <!-- Favicons -->
-     <link rel="icon" href="Assets/images/favicon.jpg">
+     <link rel="icon" href="../Assets/images/favicon.jpg">
 
 </head>
 <body>
     <header id="header">
         <div class="container">
             <div class="logo-container">
-                <img src="Assets/images/logo.jpg" alt="logo">
+                <img src="../Assets/images/logo.jpg" alt="logo">
             </div>
         </div>
         <div class="nav-container">
             <nav class="header-navigation">
-                <a href="#header">Home</a>
-                <a href="Web-pages/about.html">Abouts</a>
-                <a href="Web-pages/Album.html">Album</a>
-                <a href="Web-pages/Favorites.html">Favotites</a>
-                <a href="Web-pages/">Contacts</a>
+                <nav class="header-navigation">
+                    <a href="../Index.html">Home</a>
+                    <a href="../Web-pages/about.html">Abouts</a>
+                    <a href="../Web-pages/Album.html">Album</a>
+                    <a href="../Web-pages/Favorites.html">Favorites</a>
+                    <a href="../Web-pages/contacts.html">Contacts</a>
+                </nav> 
             </nav> 
         </div>
         <section class="banner-section">
@@ -75,3 +77,5 @@
             </div>
         </div>
     </section>
+</body>
+</html>
