--- a/Web-pages/contacts.html
+++ b/Web-pages/contacts.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    
     <!-- External CSS file -->
-    <link rel="stylesheet" href="Assets/css/style.css">
+    <link rel="stylesheet" href="../Assets/css/style.css">
 
     <!-- Boxicons CSS -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -15,6 +15,32 @@
      <!-- Favicons -->
      <link rel="icon" href="Assets/images/favicon.jpg">
 
+</head>
+<body>
+    <header id="header">
+        <div class="container">
+            <div class="logo-container">
+                <img src="../Assets/images/logo.jpg" alt="logo">
+            </div>
+        </div>
+            <div class="nav-container">
+                <nav class="header-navigation">
+                    <a href="../Index.html">Home</a>
+                    <a href="../Web-pages/about.html">Abouts</a>
+                    <a href="../Web-pages/Album.html">Album</a>
+                    <a href="../Web-pages/Favorites.html">Favorites</a>
+                    <a href="../Web-pages/contacts.html">Contacts</a>
+                </nav> 
+        </div>
+            <section class="banner-section">
+                <div class ="container">
+                    <div class="banner">
+                        <h1>Hi! I'm Kristine Joyce Diego and Welcome </h1>
+                        <h1>to my Personal Website</h1>
+                    </div>  
+                <div>            
+            </section>
+        </header>     
      
 <section id="contact">
     <div class="container">
@@ -54,3 +80,5 @@
         </section>
     </div>
 </footer>
+</body>
+</html>
