--- a/Web-pages/about.html
+++ b/Web-pages/about.html
@@ -25,11 +25,11 @@
         </div>
         <div class="nav-container">
             <nav class="header-navigation">
-                <a href="#header">Home</a>
-                <a href="Web-pages/about.html">Abouts</a>
-                <a href="Web-pages/Album.html">Album</a>
-                <a href="Web-pages/Favorites.html">Favotites</a>
-                <a href="Web-pages/">Contacts</a>
+                <a href="../Index.html">Home</a>
+                <a href="../Web-pages/about.html">Abouts</a>
+                <a href="../Web-pages/Album.html">Album</a>
+                <a href="../Web-pages/Favorites.html">Favorites</a>
+                <a href="../Web-pages/contacts.html">Contacts</a>
             </nav> 
         </div>
         <section class="banner-section">
@@ -73,3 +73,5 @@
             </section>
         </div>
     </footer>
+</body>
+</html>
