--- a/Web-pages/Album.html
+++ b/Web-pages/Album.html
@@ -37,8 +37,7 @@
         <section class="banner-section">
             <div class ="container">
                 <div class="banner">
-                    <h1>Hi! I'm Kristine Joyce Diego and Welcome </h1>
-                    <h1>to my Personal Website</h1>
+                    <h2>My Album</h2>
                 </div>  
             <div>            
         </section>
@@ -46,36 +45,104 @@
     
     <section id="Album" class="Album-section">
         <div class="container">
-            <h2>My Album</h2>
             <div class="row">
-                <div class="col">
-                    <span><i class='bx bxl-windows' ></i></span>
-                    <p>lorem ipsum is simply dummy text of the printing and typesetting industry.</p>
-                </div>
-                <div class="col">
-                    <span><i class='bx bxs-coffee'></i></span>
-                    <p>lorem ipsum is simply dummy text of the printing and typesetting industry.</p>
-                </div>
-                <div class="col">
-                    <span><i class='bx bxl-apple'></i></span>
-                    <p>lorem ipsum is simply dummy text of the printing and typesetting industry.</p>
+                <h3>Family</h3>
+                <div class="Family-container">
+                    <div class="Family1">
+                       <p></p>
+                    </div>
+                    <div class="Family2">
+                         <p></p>
+                    </div>
+                    <div class="Family3">
+                        <p></p>
+                     </div> 
+                    <div class="Family4">
+                        <p></p>
+                    </div>               
                 </div>
             </div>
-            <div class="row-2">
-                <div class="col">
-                    <span><i class='bx bxs-book'></i></span>
-                    <p>lorem ipsum is simply dummy text of the printing and typesetting industry.</p>
+        </div>
+        <div class="container">
+            <div class="row">
+                <h3>High School Memories</h3>
+                <div class="HS Memories-container">
+                    <div class="HS Memories1">
+                       <p></p>
+                    </div>
+                    <div class="HS Memories2">
+                         <p></p>
+                    </div>
+                    <div class="HS Memories3">
+                        <p></p>
+                     </div> 
+                    <div class="HS Memories4">
+                        <p></p>
+                    </div>               
                 </div>
-                <div class="col">
-                    <span><i class='bx bxl-react'></i></span>
-                    <p>lorem ipsum is simply dummy text of the printing and typesetting industry.</p>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <h3>High School Clubs </h3>
+                <div class="HS Clubs-container">
+                    <div class="HS Clubs1">
+                       <p></p>
+                    </div>
+                    <div class="HS Clubs2">
+                         <p></p>
+                    </div>
+                    <div class="HS Clubs3">
+                        <p></p>
+                     </div> 
+                    <div class="HS Clubs4">
+                        <p></p>
+                    </div>               
                 </div>
-                <div class="col">
-                    <span><i class='bx bx-music'></i></span>
-                    <p>lorem ipsum is simply dummy text of the printing and typesetting industry.</p>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <h3>Collage</h3>
+                <div class="Collage-container">
+                    <div class="Collage1">
+                       <p></p>
+                    </div>
+                    <div class="Collage2">
+                         <p></p>
+                    </div>
+                    <div class="Collage3">
+                        <p></p>
+                     </div> 
+                    <div class="Collage4">
+                        <p></p>
+                    </div>               
                 </div>
             </div>
         </div>
     </section>
+
+    <footer>
+        <div class="container">
+            <section class="footer-1">
+                <div class="col contact-info">
+                    <h3>By signing up you agree to our Privacy Policy.<br>
+                        <span class="copyright">© 2022 All Rights Reserved.</span>
+                    <p> 3977 Bicetown Road New York, NY 10011</p>
+                    <p> <a href="tel:+7733484581">(773) 348-4581 </a> </p>
+                    <div class="social-media-icon">
+                        <a href="#" target="_blank"> <i class='bx bxl-facebook-circle'></i> </a>
+                        <a href="#" target="_blank"> <i class='bx bxl-twitter'></i> </a>
+                        <a href="#" target="_blank"> <i class='bx bxl-instagram'></i></a>
+                    </div>
+                </div>
+            </section>
+        </div>
+    </footer>
+
+    <!-- JS Bootstrap -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
 </html>
