--- a/Web-pages/contacts.html
+++ b/Web-pages/contacts.html
@@ -17,7 +17,7 @@
 
 </head>
 <body>
-    <header id="header">
+    <header id="contacts">
         <div class="container">
             <div class="logo-container">
                 <img src="../Assets/images/logo.jpg" alt="logo">
@@ -35,8 +35,7 @@
             <section class="banner-section">
                 <div class ="container">
                     <div class="banner">
-                        <h1>Hi! I'm Kristine Joyce Diego and Welcome </h1>
-                        <h1>to my Personal Website</h1>
+                        <h1>Contacts</h1>
                     </div>  
                 <div>            
             </section>
@@ -66,11 +65,10 @@
 <footer>
     <div class="container">
         <section class="footer-1">
-            <div class="col contact-info">
+            <div class="footer">
                 <h3>By signing up you agree to our Privacy Policy.<br>
-                    <span class="copyright">© 2022 All Rights Reserved.</span>
+                <p>"copyright">© 2023 All Rights Reserved.</p>
                 <p> 3977 Bicetown Road New York, NY 10011</p>
-                <p> <a href="tel:+7733484581">(773) 348-4581 </a> </p>
                 <div class="social-media-icon">
                     <a href="#" target="_blank"> <i class='bx bxl-facebook-circle'></i> </a>
                     <a href="#" target="_blank"> <i class='bx bxl-twitter'></i> </a>
