--- a/Index.html
+++ b/Index.html
@@ -17,7 +17,7 @@
 
 </head>
 <body>
-    <header id="header">
+    <header id="home-header">
         <div class="container">
             <div class="logo-container">
                 <img src="Assets/images/logo.jpg" alt="logo">
