--- a/Web-pages/contacts.html
+++ b/Web-pages/contacts.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>DIEGO PERSONAL WEBSITE-HOME </title>
+    <title>DIEGO PERSONAL WEBSITE </title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -32,15 +32,16 @@
                     <a href="../Web-pages/contacts.html">Contacts</a>
                 </nav> 
         </div>
-            <section class="banner-section">
-                <div class ="container">
-                    <div class="banner">
-                        <h1>Contacts</h1>
-                    </div>  
-                <div>            
-            </section>
         </header>     
      
+        <section class="banner-section">
+            <div class ="container">
+                <div class="banner">
+                    <h2>My Album</h2>
+                </div>  
+            <div>            
+        </section>
+
 <section id="contact">
     <div class="container">
         <div class="form-container">
