--- a/Web-pages/about.html
+++ b/Web-pages/about.html
@@ -127,6 +127,7 @@
         </div>
         <div class="col-md-5">
           <!--svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>-->
+          <img src="../Assets/images/About/columns1.jpeg" width="100" height="">
         </div>
       </div>
   
@@ -139,6 +140,7 @@
         </div>
         <div class="col-md-5 order-md-1">
           <!--svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>-->
+          <img src="../Assets/images/About/columns1.jpeg" width="100" height="">
         </div>
       </div>
   
@@ -151,6 +153,7 @@
         </div>
         <div class="col-md-5">
           <!--svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>-->
+          <img src="../Assets/images/About/columns1.jpeg" width="100" height="">
         </div>
       </div>
   
