--- a/Web-pages/Favorites.html
+++ b/Web-pages/Favorites.html
@@ -17,38 +17,75 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="../Assets/css/product.css">
 
 
 </head>
 <body>
-  <header id="home-header">
-    <div class="container">
-        <div class="logo-container">
-            <img src="../Assets/images/logo.jpg" alt="logo">
+    <header id="favorites-header">
+        <div class="container">
+            <div class="logo-container-favorites">
+                <img src="../Assets/images/logo.jpg" alt="logo">
+            </div>
         </div>
-    </div>
-    <div class="nav-container">
-        <nav class="header-navigation">
-            <a href="../Index.html">Home</a>
-            <a href="../Web-pages/about.html">Abouts</a>
-            <a href="../Web-pages/Album.html">Album</a>
-            <a href="../Web-pages/Favorites.html">Favorites</a>
-            <a href="../Web-pages/contacts.html">Contacts</a>
-        </nav> 
-    </div>
-</header>
+        <div class="nav-container">
+            <nav class="header-navigation">
+                <a href="../Index.html">Home</a>
+                <a href="../Web-pages/about.html">Abouts</a>
+                <a href="../Web-pages/Album.html">Album</a>
+                <a href="../Web-pages/Favorites.html">Favorites</a>
+                <a href="../Web-pages/contacts.html">Contacts</a>
+            </nav> 
+        </div>
+    </header>  
 
-<section class="banner-section">
-    <div class ="container">
-        <div class="banner">
-            <h1>Hi! I'm Kristine Joyce Diego and Welcome </h1>
-            <h1>to my Personal Website</h1>
-        </div>  
-    <div>            
-</section>
+    <section class="banner-section">
+        <div class ="container">
+            <div class="banner">
+                <h1>Hi! I'm Kristine Joyce Diego and Welcome </h1>
+                <h1>to my Personal Website</h1>
+            </div>  
+        <div>            
+    </section>
 
-  
+      <main>
+      
+        <div class="d-md-flex flex-md-equal w-100 my-md-3 ps-md-3">
+          <div class=" me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
+            <div class="my-3 p-3">
+              <h2 class="display-5">Reading friction Stories</h2>
+              <p class="lead">I love reading wattpAd stories when Im bored. </p>
+            </div>
+            <!--div class="bg-body shadow-sm mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>-->
+            <img src="../Assets/images/Favorites/reading.jpg" alt="reading">
+        </div>
+          <div class="bg-dark me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
+            <div class="my-3 py-3">
+              <h2 class="display-5">Badminton</h2>
+            </div>
+            <!--div class="bg-body shadow-sm mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>-->
+            <img src="../Assets/images/Favorites/badminton.jpg" alt="badminton">
+        </div>
+        </div>
+        <div class="d-md-flex flex-md-equal w-100 my-md-3 ps-md-3">
+          <div class="bg-dark me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
+            <div class="my-3 p-3">
+              <h2 class="display-5">cooking</h2>
+            </div>
+            <!--div class="bg-body shadow-sm mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>-->
+            <img src="../Assets/images/Favorites/cooking.jpg" alt="cooking">
+        </div>
+          <div class="me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
+            <div class="my-3 py-3">
+              <h2 class="display-5">Sweet</h2>
+              <p class="lead">I love eating sweet especially chocolates.</p>
+            </div>
+            <!--div class="bg-body shadow-sm mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>-->
+            <img src="../Assets/images/Favorites/Sweets.jpg" alt="sweet">
+        </div>
+        </div>
+      </main>
+
     <footer>
         <div class="container">
             <section class="footer-1">
