--- a/Web-pages/contacts.html
+++ b/Web-pages/contacts.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>DIEGO PERSONAL WEBSITE </title>
+    <title>DIEGO PERSONAL WEBSITE-Contacts </title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,7 +17,7 @@
 
 </head>
 <body>
-    <header id="contacts">
+    <header id="contacts-header">
         <div class="container">
             <div class="logo-container">
                 <img src="../Assets/images/logo.jpg" alt="logo">
@@ -31,16 +31,17 @@
                     <a href="../Web-pages/Favorites.html">Favorites</a>
                     <a href="../Web-pages/contacts.html">Contacts</a>
                 </nav> 
+                <section class="banner-section-account">
+                    <div class ="container">
+                        <div class="banner">
+                            <h6>Contacts</h6>
+                        </div>  
+                    <div>            
+                </section>
         </div>
         </header>     
      
-        <section class="banner-section">
-            <div class ="container">
-                <div class="banner">
-                    <h2>My Album</h2>
-                </div>  
-            <div>            
-        </section>
+
 
 <section id="contact">
     <div class="container">
