--- a/Web-pages/Album.html
+++ b/Web-pages/Album.html
@@ -17,7 +17,7 @@
 
 </head>
 <body>
-    <header id="header">
+    <header id="album-header">
         <div class="container">
             <div class="logo-container">
                 <img src="../Assets/images/logo.jpg" alt="logo">
@@ -32,17 +32,18 @@
                     <a href="../Web-pages/Favorites.html">Favorites</a>
                     <a href="../Web-pages/contacts.html">Contacts</a>
                 </nav> 
+                <section class="banner-section-album">
+                    <div class ="container">
+                        <div class="banner">
+                            <h5>My Album</h5>
+                        </div>  
+                    <div>            
+                </section>
             </nav> 
         </div>
     </header>
 
-    <section class="banner-section">
-        <div class ="container">
-            <div class="banner">
-                <h2>My Album</h2>
-            </div>  
-        <div>            
-    </section>
+
 
     
     <section id="Album" class="Album-section">
