--- a/Web-pages/Favorites.html
+++ b/Web-pages/Favorites.html
@@ -36,17 +36,15 @@
                 <a href="../Web-pages/Favorites.html">Favorites</a>
                 <a href="../Web-pages/contacts.html">Contacts</a>
             </nav> 
+            <section class="banner-section-favorites">
+              <div class ="container">
+                  <div class="banner">
+                      <h7>Favorites</h7>
+                  </div>  
+              <div>            
+          </section>
         </div>
     </header>  
-
-    <section class="banner-section">
-        <div class ="container">
-            <div class="banner">
-                <h1>Hi! I'm Kristine Joyce Diego and Welcome </h1>
-                <h1>to my Personal Website</h1>
-            </div>  
-        <div>            
-    </section>
 
       <main>
       
