--- a/Web-pages/about.html
+++ b/Web-pages/about.html
@@ -21,7 +21,7 @@
 
 </head>
 <body>
-    <header id="about-header">
+    <header id="header">
         <div class="container">
             <div class="logo-container">
                 <img src="../Assets/images/logo.jpg" alt="logo">
