--- a/Web-pages/about.html
+++ b/Web-pages/about.html
@@ -167,22 +167,22 @@
     </div><!-- /.container -->
 
 
-      <footer>
-        <div class="container">
-            <section class="footer-1">
-                <div class="footer">
-                    <h3>By signing up you agree to our Privacy Policy.<br>
-                    <p>"copyright">© 2023 All Rights Reserved.</p>
-                    <p> 3977 Bicetown Road New York, NY 10011</p>
-                    <div class="social-media-icon">
-                        <a href="#" target="_blank"> <i class='bx bxl-facebook-circle'></i> </a>
-                        <a href="#" target="_blank"> <i class='bx bxl-twitter'></i> </a>
-                        <a href="#" target="_blank"> <i class='bx bxl-instagram'></i></a>
-                    </div>
-                </div>
-            </section>
-        </div>
-    </footer>
+    <footer>
+      <div class="container">
+          <section class="footer-1">
+              <div class="footer">
+                  <h3>By signing up you agree to our Privacy Policy.<br>
+                  <p>"copyright">© 2023 All Rights Reserved.</p>
+                  <p> 3977 Bicetown Road New York, NY 10011</p>
+                  <div class="social-media-icon">
+                      <a href="https://www.facebook.com/ruel.ascares" target="_blank"> <i class='bx bxl-facebook-circle'></i> </a>
+                      <a href="#" target="_blank"> <i class='bx bxl-twitter'></i> </a>
+                      <a href="https://www.instagram.com/invites/contact/?i=1h6srstknuhzd&utm_content=o3cmxx9" target="_blank"> <i class='bx bxl-instagram'></i></a>
+                  </div>
+              </div>
+          </section>
+      </div>
+  </footer>
 
     <!-- JS Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
