--- a/Web-pages/Album.html
+++ b/Web-pages/Album.html
@@ -133,9 +133,9 @@
                     <p>"copyright">© 2023 All Rights Reserved.</p>
                     <p> 3977 Bicetown Road New York, NY 10011</p>
                     <div class="social-media-icon">
-                        <a href="#" target="_blank"> <i class='bx bxl-facebook-circle'></i> </a>
+                        <a href="https://www.facebook.com/ruel.ascares" target="_blank"> <i class='bx bxl-facebook-circle'></i> </a>
                         <a href="#" target="_blank"> <i class='bx bxl-twitter'></i> </a>
-                        <a href="#" target="_blank"> <i class='bx bxl-instagram'></i></a>
+                        <a href="https://www.instagram.com/invites/contact/?i=1h6srstknuhzd&utm_content=o3cmxx9" target="_blank"> <i class='bx bxl-instagram'></i></a>
                     </div>
                 </div>
             </section>
