--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="google-site-verification" content="Ax_zQthNNkPOCqgr0GR5fDGA97dzgiprVMor50i_vYI" />
+    <meta name="google-site-verification" content="xRZ6CMlr6L6192GBC5DKPsd53ENuREDno18YI6Eu7-I" />
+    <meta name="description" content="DIEGO PERSONAL WEBSIT"/>
     <!-- External CSS file -->
     <link rel="stylesheet" href="Assets/css/style.css">
 
