--- a/Web-pages/Album.html
+++ b/Web-pages/Album.html
@@ -26,7 +26,7 @@
         <div class="nav-container">
             <nav class="header-navigation">
                 <nav class="header-navigation">
-                    <a href="../Index.html">Home</a>
+                    <a href="../index.html">Home</a>
                     <a href="../Web-pages/about.html">Abouts</a>
                     <a href="../Web-pages/Album.html">Album</a>
                     <a href="../Web-pages/Favorites.html">Favorites</a>
