--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="google-site-verification" content="xRZ6CMlr6L6192GBC5DKPsd53ENuREDno18YI6Eu7-I" />
-    <meta name="description" content="DIEGO PERSONAL WEBSIT"/>
+    <meta name="google-site-verification" content="Ax_zQthNNkPOCqgr0GR5fDGA97dzgiprVMor50i_vYI" />
+  
     <!-- External CSS file -->
     <link rel="stylesheet" href="Assets/css/style.css">
 
@@ -26,7 +26,7 @@
         </div>
         <div class="nav-container">
             <nav class="header-navigation">
-                <a href="Index.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href="Web-pages/about.html">Abouts</a>
                 <a href="Web-pages/Album.html">Album</a>
                 <a href="Web-pages/Favorites.html">Favorites</a>
